2008-08-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Frederic Crozat <fcrozat@mandriva.org>

	* ext/dvdread/dvdreadsrc.c: (plugin_init):
	* ext/lame/gstlame.c: (plugin_init):
	* gst/asfdemux/gstasf.c: (plugin_init):
	Make sure gettext returns translations in UTF-8 encoding rather
	than in the current locale encoding (#546822).

2008-07-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_sink_event), (gst_mp3parse_emit_frame),
	(mp3parse_total_time), (mp3parse_bytepos_to_time):
	Don't recurse from mp3parse_bytepos_to_time() to mp3parse_total_time()
	if we're called from there already. Otherwise we end up in a endless
	recursion and crash with a stack overflow.

	This can happen when a Xing or VBRI header with TOC exists but it
	doesn't contain the total time. Fixes bug #545370.

2008-07-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/lame/gstlame.c: (gst_lame_class_init),
	(gst_lame_get_default_settings):
	Use the default for the strict-iso property too.

	Allow a bitrate setting of 0, which lets lame choose the default value
	and which makes it possible to set the compression-ratio property.

2008-07-29  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/lame/gstlame.c: (gst_lame_class_init), (gst_lame_init),
	(gst_lame_chain), (gst_lame_get_default_settings), (plugin_init):
	* ext/lame/gstlame.h:
	Get the defaults settings of LAME in the plugin initialization
	function and return FALSE here if something goes wrong. This removes
	the hacky failing instance init function.

	Use LAMEs default value for all settings instead of overwriting some
	of them. Overwriting some of them gives unexpected results if one only
	sets a preset. Fixes bug #498004.

2008-07-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/lame/gstlame.c: (gst_lame_init):
	Use LAME's default for the min/max/mean VBR bitrate. Setting our own